[package]
name = "rdf-diff-store"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
async-lock = "2.5.0"
async-std = "1.12.0"
async-trait = "0.1.67"
base64 = "0.21.0"
futures-util = "0.3.27"
git2 = "0.16.1"
lazy_static = "1.4.0"
mime = "0.3.16"
moka = "0.10.2"
oxigraph = "0.3.6"
prometheus = "0.13.2"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
