[package]
name = "rdf-diff-store"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.5.1"
async-lock = "2.5.0"
async-std = "1.12.0"
async-trait = "0.1.68"
base64 = "0.21.0"
futures-util = "0.3.27"
git2 = "0.18.2"
lazy_static = "1.4.0"
mime = "0.3.16"
moka = { version = "0.12.5", features = ["sync"] }
oxigraph = "0.3.6"
prometheus = "0.13.2"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
